# RizzoMemory

./: .gitignore  AGENTS.md  LICENSE  README.md  dune-project  install.ps1  install.sh  package.json  rizzoc.opam
.github/workflows/: build-and-test.yml  release.yml
examples/: advance.rizz  eval_small.rizz  features.rizz  first.rizz  fizzbuzz.rizz  m.rizz  match.rizz  paper.rizz  quit.rizz  result.rizz  reuse.rizz  signal.rizz  simple.rizz  snake.rizz  stop.rizz
lib/: common.ml  dune  lambda1.ml  multiset.ml  refcount.ml  reusem.ml
notes/: 2026-02-02.md  2026-02-06-supervisor.md  2026-02-12-supervisor.md  2026-02-16.md  2026-02-19.md  2026-02-26-supervisor.md  2026-03-05-supervisor.md  2026-03-06.md  2026-03-12-supervisor.md  2026-03-19-supervisor.md  2026-03-26-supervisor.md  2026-04-09-supervisor.md  2026-04-16-supervisor.md  2026-04-30-supervisor.md  plan.md  progress.md  syntax.md
notes/docs/: backend-representation.md  match.md  patterns.md  signal-heap-graph.md
pdf/: Makefile  main.tex  references.bib
pdf/appendix/: advance  advance.rizz  main.tex  paper-fast-clock.rizz
scripts/: package-toolchain.mjs  paper-example-valgrind.sh  write-build-version.mjs
src/lib/: ast.ml  ast.mli  ast_helpers.ml  backend_c.ml  dune  (+26 more)
src/runtime/: allocation.h  box.h  builtins.h  channel.h  core.c  core.h  dune  heap.h  later.h  os.h  rizzo.h  rzstring.h  tcp.h  timer.h
test/: dune
vscode-rizz-lsp/: .vscodeignore  README.md  package-lock.json  package.json
vscode-rizzo-lsp/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json
(+89 files in other folders)
